* Wheels now compacts the output of the rendered content - [James Gibson]

Other Enhancements
==================
* Added automatic caching in production mode of function results based on the arguments passed in - [Per Djurner]
* Plugin functions can now be injected into base model adapter and model connection components - [Per Djurner]

Bug Fixes
=========
* Allow blank values to be passed through to validation - #638 [Per Djurner]
* Allow for encoding autodetection within provides - #674 [Raul Riera]

Miscellaneous
=============
* Removed the "cacheDatabaseSchema" setting, "cacheModelInitialization" should now be used instead - [Per Djurner]

-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

WHEELS VERSION 1.1.2

Model Enhancements
==================
* Add 'when' argument to validate() - #643 [Andy Bellenie, Tony Petruzzi]

Bug Fixes
=========
* Added the varchar_ignorecase type to the H2 adapter - #664 [Per Djurner]
* Fix so that the full tablename is always retuned - #667 [Tony Petruzzi]
* Blank should be the selected value when includeBlank is set - #633 [Tony Petruzzi]

-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

WHEELS VERSION 1.1.1

Bug Fixes
=========
* Added number formatting on the value passed in to "count" in the pluralize() function - [Per Djurner]
* Fixed renderWith() so that it works in all environment modes when returning JSON - #644 [Tony Petruzzi]
* Fixed belongsTo association code when using composite keys - #641 [James Gibson, Andy Bellenie]
* Allow cfthread to be used in views - #612 [Cathy Shapiro, Tony Petruzzi]
* Fixed paging code for non-parameterized queries - #656 [Mike Lester, Tony Petruzzi]