@@ -48,7 +48,7 @@
 		<cfset loc.args.spamProtection = "true">
 		<cfset loc.args.action = "myaction">
 		<cfset loc.argsction = loc.controller.toXHTML(loc.controller.urlfor(argumentCollection=loc.args))>
-		<cfset loc.e = '<form method="post" onsubmit="this.action=''#Left(loc.argsction, int((Len(loc.argsction)/2)))#''+''#Right(loc.argsction, ceiling((Len(loc.argsction)/2)))#'';">'>
+		<cfset loc.e = '<form data-this-action="#Left(loc.argsction, int((Len(loc.argsction)/2)))##Right(loc.argsction, ceiling((Len(loc.argsction)/2)))#" method="post">'>
 		<cfset loc.r = loc.controller.startFormTag(argumentcollection=loc.args)>
 		<cfset assert("loc.e eq loc.r")>
 	</cffunction>
@@ -65,6 +65,14 @@
 		<cfset loc.args.action = "https://www.cfwheels.com">
 		<cfset loc.args.multipart = true>
 		<cfset loc.e = '<form action="https://www.cfwheels.com" enctype="multipart/form-data" method="post">'>
+		<cfset loc.r = loc.controller.startFormTag(argumentcollection=loc.args)>
+		<cfset assert("loc.e eq loc.r")>
+	</cffunction>
+	
+	<cffunction name="test_remote_link">
+		<cfset loc.args.route = "home">
+		<cfset loc.args.remote = "true">
+		<cfset loc.e = '<form action="#loc.argsction#" data-remote="true" method="post">'>
 		<cfset loc.r = loc.controller.startFormTag(argumentcollection=loc.args)>
 		<cfset assert("loc.e eq loc.r")>
 	</cffunction>
