@@ -13,7 +13,7 @@
 
 	<cffunction name="test_disabled_is_escaped">
 		<cfset loc.e = loc.controller.submitTag(disable="Mark as: 'Completed'?")>
-		<cfset loc.r = '<input onclick="this.disabled=true;this.value=''Mark as: \''Completed\''?'';this.form.submit();" type="submit" value="Save changes" />'>
+		<cfset loc.r = '<input data-disable-with="Mark as: \''Completed\''?" type="submit" value="Save changes" />'>
 		<cfset assert('loc.e eq loc.r')>
 	</cffunction>
 
