@@ -20,7 +20,7 @@
 	</cffunction>
 
 	<cffunction name="test_confirm_is_escaped">
-		<cfset loc.e = '<a href="#application.wheels.webpath#" onclick="return confirm(''Mark as: \''Completed\''?'');">#application.wheels.webpath#</a>'>
+		<cfset loc.e = '<a data-confirm="Mark as: \''Completed\''?" href="#application.wheels.webpath#">#application.wheels.webpath#</a>'>
 		<cfset loc.r = loc.controller.linkTo(confirm="Mark as: 'Completed'?")>
 		<cfset assert('loc.e eq loc.r')>
 	</cffunction>
@@ -28,6 +28,12 @@
 	<cffunction name="test_external_links">
 		<cfset loc.e = '<a href="http://www.cfwheels.com">CFWheels</a>'>
 		<cfset loc.r = loc.controller.linkTo(href="http://www.cfwheels.com", text="CFWheels")>
+		<cfset assert('loc.e eq loc.r')>
+	</cffunction>
+	
+	<cffunction name="test_remote_links">
+		<cfset loc.e = '<a data-remote="true" href="#application.wheels.webpath#account/logout">Log Out</a>'>
+		<cfset loc.r = loc.controller.linkTo(text="Log Out", controller="account", action="logout", remote="true")>
 		<cfset assert('loc.e eq loc.r')>
 	</cffunction>
 
